--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Es">
 <html>
 <head> 
-  <link rel="stylesheet" href="stiletto css.css">
+  <link rel="stylesheet" href="style.css">
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>pedidos ya jose.c.paz</title>
 </head>
